[package]
name = "mixnets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    blstrs = "0.7.1"
    blst = { version = "0.3.11", default-features = true }
    ff = "0.13"
    group = { version = "0.13", features = ["tests"] }
    crypto-bigint = "0.2.10"
    rand_core = "0.6"
    rand = "0.8.5"
    blake3 = "1.2.0"

[dev-dependencies]
    criterion = {version = "0.5.1", features = ["html_reports"]}

[[bench]]
    name = "bench"
    harness = false

[lib]
    name = "mixnetslib"
    path = "src/lib.rs"
